force-app/main/default/objects/Intento_de_certificacion__c/Intento_de_certificacion__c.object-meta.xml
<CustomObject>
    <label>Intento de certificación</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intentos de certificación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>