force-app/main/default/objects/Intento_de_certificacion__c/fields/Aprueba__c.field-meta.xml
<CustomField>
    <fullName>Aprueba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprueba</label>
    <type>Checkbox</type>
</CustomField>