force-app/main/default/objects/Intento_de_certificacion__c/fields/Certificaciones_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Certificaciones_Salesforce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificaciones Salesforce</label>
    <referenceTo>Certificaciones_Salesforce__c</referenceTo>
    <relationshipName>Certificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>