force-app/main/default/objects/Intento_de_certificacion__c/fields/Miembro_de_la_cohorte__c.field-meta.xml
<CustomField>
    <fullName>Miembro_de_la_cohorte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Miembro de la cohorte</label>
    <referenceTo>Miembro_de_la_cohorte__c</referenceTo>
    <relationshipName>Certificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>