force-app/main/default/objects/Intento_de_certificacion__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>