force-app/main/default/objects/Intento_de_certificacion__c/fields/Tipo_de_intento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_intento__c</fullName>
    <label>Tipo de intento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificación</fullName>
            </value>
            <value>
                <fullName>Simulacro de certificación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>