force-app/main/default/objects/Intento_de_certificacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_certificaci_n__c</columns>
    <columns>Certificaciones_Salesforce__c</columns>
    <columns>Miembro_de_la_cohorte__c</columns>
    <columns>Resultado__c</columns>
    <columns>Aprueba__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>